# rust-cdk-authorizer

./: cdk.json
auth/: Cargo.toml
auth/src/: main.rs
lib/: app-stack.ts
