[package]
name = "cf-authorizer"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.55.0"
aws_lambda_events = "0.8.3"
aws-sdk-ssm = "0.27.0"
jsonwebtoken = "8.3.0"
lambda_runtime = "0.8.0"
log = "^0.4"
openssl = { version = "0.10.49", features = ["vendored"] }
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
simple-error = "0.3.0"
tokio = { version = "1.0", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "json"] }